2009-11-11
	* Added support for $pid_cmdline
	* Added support for $pid_cwd
	* Added support for $pid_environ

2009-11-10
	* Fix $if_mpd_playing and $mpd_percent when you stop playing a song,
	thanks Sakari Matikka

2009-11-09
	* Fix $scroll only scrolls once

2009-11-08
	* Fix segfaults and memleaks in curl
	* Fix building with metar but without xoap

2009-11-07
	* Added support for $threads on Linux
	* Fixed bug in $processes on Linux
	* Fixed building with --disable-x11, --disable-xft, --disable-lua,
	--disable-ncurses and --disable-iostats
	* Added ncurses to the "-v" output when necessary

2009-10-25
	* Fixed loadavg and loadgraph argument parsing and corrected it's
	documentation.

2009-09-11
	* Fixed configure test failure. Tolua test program couldn't find lua
	libraries (even though they existed) and failed to compile.

2009-09-06
	* Rewrite hddtemp support for better scaling.

2009-08-10
	* Add day and date data_type to $weather_forecast

2009-08-03
	* Added support for $weather_forecast (experimental)

2009-08-01
	* Added support for out_to_ncurses

2009-07-31
	* Removed alias config option due to brokenness
	* Added support for $include

2009-07-29
	* Add icon data_type for xoap weather

2009-07-23
	* Changed xoap parsing method to xpath, in preparation to include
	forecast data

2009-07-19
	* Fixed out-of-tree builds
	* Update MPD elapsed/progress when stopped (sf.net #2792113)
	* Overhauled RSS and weather, added $curl

2009-07-18
	* Added compilation switch --enable-xoap to be able to use
	www.weather.com as a source of weather data (this avoids adding
	libxml2 as a required dependency for users that wish to use noaa
	and not weather.com)
	* Added support for X alignment across multi-lined objects (i.e., using
	$alignr with $exec)
	* Disabled OpenMP code until GCC's implementation stabilizes
	* www.weather.com can now be used as well as a source of weather data

2009-07-11