@@ -650,6 +650,8 @@ struct text_object *construct_text_object(const char *s, const char *arg, long
 		scan_pid_cwd_arg(obj, arg, free_at_crash);
 	END OBJ_ARG(pid_environ, 0, "pid_environ needs arguments")
 		scan_pid_environ_arg(obj, arg, free_at_crash);
+	END OBJ_ARG(pid_environ_list, 0, "pid_environ needs a pid as argument")
+		scan_pid_environ_list_arg(obj, arg, free_at_crash);
 	END OBJ(processes, &update_total_processes)
 	END OBJ(running_processes, &update_running_processes)
 	END OBJ(threads, &update_threads)
@@ -1250,6 +1252,9 @@ void free_text_objects(struct text_object *root, int internal)
 				break;
 			case OBJ_pid_environ:
 				free_pid_environ(obj);
+				break;
+			case OBJ_pid_environ_list:
+				free(data.s);
 				break;
 			case OBJ_read_tcp:
 				free_read_tcp(obj);
